@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class ApplianceTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class ApplianceTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Appliance appliance = faker.appliance();
-        return Arrays.asList(TestSpec.of(appliance::brand, "appliance.brand", "[A-Za-z .-]+"),
+        return List.of(TestSpec.of(appliance::brand, "appliance.brand", "[A-Za-z .-]+"),
                 TestSpec.of(appliance::equipment, "appliance.equipment"));
     }
 }
