@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class ArtistTest extends BaseFakerTest<BaseFaker> {
@@ -8,6 +8,6 @@ class ArtistTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Artist artist = faker.artist();
-        return Arrays.asList(TestSpec.of(artist::name, "artist.names", "(\\w+ ?){1,2}"));
+        return List.of(TestSpec.of(artist::name, "artist.names", "(\\w+ ?){1,2}"));
     }
 }
