@@ -4,7 +4,7 @@ import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class BusinessTest extends BaseFakerTest<BaseFaker> {
@@ -32,6 +32,6 @@ class BusinessTest extends BaseFakerTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(business::creditCardType, "business.credit_card_types"));
+        return List.of(TestSpec.of(business::creditCardType, "business.credit_card_types"));
     }
 }
