@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class ChiquitoTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class ChiquitoTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Chiquito chiquito = faker.chiquito();
-        return Arrays.asList(TestSpec.of(chiquito::expressions, "chiquito.expressions"),
+        return List.of(TestSpec.of(chiquito::expressions, "chiquito.expressions"),
             TestSpec.of(chiquito::terms, "chiquito.terms"),
             TestSpec.of(chiquito::sentences, "chiquito.sentences"),
             TestSpec.of(chiquito::jokes, "chiquito.jokes"));
