@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class CoinTest extends BaseFakerTest<BaseFaker> {
@@ -8,6 +8,6 @@ class CoinTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Coin coin = faker.coin();
-        return Arrays.asList(TestSpec.of(coin::flip, "coin.flip"));
+        return List.of(TestSpec.of(coin::flip, "coin.flip"));
     }
 }
