@@ -4,7 +4,7 @@ import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class ColorTest extends BaseFakerTest<BaseFaker> {
@@ -13,7 +13,7 @@ class ColorTest extends BaseFakerTest<BaseFaker> {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(TestSpec.of(color::name, "color.name", "(\\w+ ?){1,2}"));
+        return List.of(TestSpec.of(color::name, "color.name", "(\\w+ ?){1,2}"));
     }
 
     @Test
