@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class HobbyTest extends BaseFakerTest<BaseFaker> {
@@ -8,6 +8,6 @@ class HobbyTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Hobby hobby = faker.hobby();
-        return Arrays.asList(TestSpec.of(hobby::activity, "hobby.activity"));
+        return List.of(TestSpec.of(hobby::activity, "hobby.activity"));
     }
 }
