@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class HorseTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class HorseTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Horse horse = faker.horse();
-        return Arrays.asList(TestSpec.of(horse::name, "creature.horse.name"),
+        return List.of(TestSpec.of(horse::name, "creature.horse.name"),
                 TestSpec.of(horse::breed, "creature.horse.breed"));
     }
 
