@@ -1,7 +1,7 @@
 
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class KpopTest extends BaseFakerTest<BaseFaker> {
@@ -9,7 +9,7 @@ class KpopTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Kpop kpop = faker.kpop();
-        return Arrays.asList(TestSpec.of(kpop::iGroups, "kpop.i_groups"),
+        return List.of(TestSpec.of(kpop::iGroups, "kpop.i_groups"),
                 TestSpec.of(kpop::iiGroups, "kpop.ii_groups"),
                 TestSpec.of(kpop::iiiGroups, "kpop.iii_groups"),
                 TestSpec.of(kpop::girlGroups, "kpop.girl_groups"),
