@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class MoodTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class MoodTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Mood mood = faker.mood();
-        return Arrays.asList(TestSpec.of(mood::feeling, "mood.feeling"),
+        return List.of(TestSpec.of(mood::feeling, "mood.feeling"),
             TestSpec.of(mood::emotion, "mood.emotion"),
             TestSpec.of(mood::tone, "mood.tone"));
     }
