@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class ProgrammingLanguageTest extends BaseFakerTest<BaseFaker> {
@@ -8,7 +8,7 @@ class ProgrammingLanguageTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         ProgrammingLanguage lang = faker.programmingLanguage();
-        return Arrays.asList(TestSpec.of(lang::name, "programming_language.name", "[A-Za-z\\d :,.+*()#/–\\-@πéöü'′!]+"),
+        return List.of(TestSpec.of(lang::name, "programming_language.name", "[A-Za-z\\d :,.+*()#/–\\-@πéöü'′!]+"),
             TestSpec.of(lang::creator, "programming_language.creator", "[A-Za-z .,\\-]+"));
     }
 }
