@@ -1,6 +1,6 @@
 package net.datafaker.providers.base;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class SizeTest extends BaseFakerTest<BaseFaker> {
@@ -8,6 +8,6 @@ class SizeTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Size size = faker.size();
-        return Arrays.asList(TestSpec.of(size::adjective, "size.adjective", "[a-zA-Z]+(-[a-zA-Z]+)?"));
+        return List.of(TestSpec.of(size::adjective, "size.adjective", "[a-zA-Z]+(-[a-zA-Z]+)?"));
     }
 }
