@@ -4,7 +4,7 @@ import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class SuperheroTest extends BaseFakerTest<BaseFaker> {
@@ -17,7 +17,7 @@ class SuperheroTest extends BaseFakerTest<BaseFaker> {
     @Override
     protected Collection<TestSpec> providerListTest() {
         Superhero superhero = faker.superhero();
-        return Arrays.asList(TestSpec.of(superhero::prefix, "superhero.prefix"),
+        return List.of(TestSpec.of(superhero::prefix, "superhero.prefix"),
             TestSpec.of(superhero::suffix, "superhero.suffix"),
             TestSpec.of(superhero::power, "superhero.power"),
             TestSpec.of(superhero::descriptor, "superhero.descriptor"));
