@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class BackToTheFutureTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class BackToTheFutureTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(backToTheFuture::character, "back_to_the_future.characters"),
             TestSpec.of(backToTheFuture::date, "back_to_the_future.dates"),
             TestSpec.of(backToTheFuture::quote, "back_to_the_future.quotes"));
