@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class BreakingBadTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class BreakingBadTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(breakingBad::character, "breaking_bad.characters"),
             TestSpec.of(breakingBad::episode, "breaking_bad.episodes"));
     }
