@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class BrooklynNineNineTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class BrooklynNineNineTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(brooklynNineNine::characters, "brooklyn_nine_nine.characters"),
             TestSpec.of(brooklynNineNine::quotes, "brooklyn_nine_nine.quotes"));
     }
