@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class CowboyBebopTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class CowboyBebopTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(cowboyBebop::character, "cowboy_bebop.character"),
             TestSpec.of(cowboyBebop::episode, "cowboy_bebop.episode"),
             TestSpec.of(cowboyBebop::song, "cowboy_bebop.song"),
