@@ -1,7 +1,7 @@
 package net.datafaker.providers.entertainment;
 
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class DetectiveConanTest extends EntertainmentFakerTest {
@@ -10,7 +10,7 @@ class DetectiveConanTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(detectiveConan::characters, "detective_conan.characters"),
             TestSpec.of(detectiveConan::gadgets, "detective_conan.gadgets"),
             TestSpec.of(detectiveConan::vehicles, "detective_conan.vehicles")
