@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class FriendsTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class FriendsTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(friends::character, "friends.characters"),
             TestSpec.of(friends::quote, "friends.quotes"),
             TestSpec.of(friends::location, "friends.locations")
