@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class SpongebobTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class SpongebobTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(spongebob::characters, "spongebob.characters"),
             TestSpec.of(spongebob::episodes, "spongebob.episodes"),
             TestSpec.of(spongebob::quotes, "spongebob.quotes")
