@@ -1,6 +1,6 @@
 package net.datafaker.providers.entertainment;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class TheVentureBrosTest extends EntertainmentFakerTest {
@@ -9,7 +9,7 @@ class TheVentureBrosTest extends EntertainmentFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(theVentureBros::character, "the_venture_bros.character"),
             TestSpec.of(theVentureBros::organization, "the_venture_bros.organization"),
             TestSpec.of(theVentureBros::quote, "the_venture_bros.quote"),
