@@ -1,7 +1,7 @@
 package net.datafaker.providers.sport;
 
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class EnglandFootBallTest extends SportFakerTest {
@@ -10,7 +10,7 @@ class EnglandFootBallTest extends SportFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(englandFootBall::league, "englandfootball.leagues"),
             TestSpec.of(englandFootBall::team, "englandfootball.teams")
         );
