@@ -1,6 +1,6 @@
 package net.datafaker.providers.videogame;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 
@@ -10,7 +10,7 @@ class ClashOfClansTest extends VideoGameFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(clashOfClans::defensiveBuilding, "clash_of_clans.defensive_buildings"),
             TestSpec.of(clashOfClans::rank, "clash_of_clans.ranks"),
             TestSpec.of(clashOfClans::troop, "clash_of_clans.troops")
