@@ -1,6 +1,6 @@
 package net.datafaker.providers.videogame;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 
@@ -10,7 +10,7 @@ class SuperMarioTest extends VideoGameFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(superMario::characters, "games.super_mario.characters"),
             TestSpec.of(superMario::games, "games.super_mario.games"),
             TestSpec.of(superMario::locations, "games.super_mario.locations")
