@@ -1,6 +1,6 @@
 package net.datafaker.providers.videogame;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 
 class SuperSmashBrosTest extends VideoGameFakerTest {
@@ -9,7 +9,7 @@ class SuperSmashBrosTest extends VideoGameFakerTest {
 
     @Override
     protected Collection<TestSpec> providerListTest() {
-        return Arrays.asList(
+        return List.of(
             TestSpec.of(superSmashBros::fighter, "games.super_smash_bros.fighter"),
             TestSpec.of(superSmashBros::stage, "games.super_smash_bros.stage")
         );
